@@ -4,6 +4,7 @@ Revision history for Perl package Data::Beacon
 
 0.3.1 2014-03-
     - Added abstract to pod, so tools like MetaCPAN can find it
+    - Added author and copyright/license sections to pod
 
 0.3.0 2012-12-04*
     - removed BEACON collection handling
